Upgraded the version to 0.3.0

--- a/README.adoc
+++ b/README.adoc
@@ -10,7 +10,9 @@ Logging is achieved using the SLF4J facade over Logback. The logging configurati
 
 == Demonstrated Concepts
 
-* Placeholder text
+* JsonDeserializer
+* JsonSerializer
+* TypeAdapter
 
 == Additional Features
 
@@ -25,5 +27,5 @@ Gradle JavaExec Tasks
 |execute                |No arguments
 |=======================
 
-Current version: 0.2.0.
+Current version: 0.3.0.
 ~~~~~~~~~~~~~~~~~~~~~~~
