--- a/README.adoc
+++ b/README.adoc
@@ -12,7 +12,9 @@ Logging is achieved using the SLF4J facade over Logback. The logging configurati
 
 * JsonDeserializer
 * JsonSerializer
+* Null Serialization
 * TypeAdapter
+* Versioning
 
 == Additional Features
 
@@ -27,5 +29,5 @@ Gradle JavaExec Tasks
 |execute                |No arguments
 |=======================
 
-Current version: 0.3.0.
+Current version: 0.4.0.
 ~~~~~~~~~~~~~~~~~~~~~~~
