--- a/README.adoc
+++ b/README.adoc
@@ -13,6 +13,7 @@ Logging is achieved using the SLF4J facade over Logback. The logging configurati
 * JsonDeserializer
 * JsonSerializer
 * Null Serialization
+* Serializing Inner Classes
 * TypeAdapter
 * TypeToken
 * Versioning
@@ -32,5 +33,5 @@ Gradle JavaExec Tasks
 |execute                |No arguments
 |=======================
 
-Current version: 0.5.0.
+Current version: 0.6.0.
 ~~~~~~~~~~~~~~~~~~~~~~~
