--- a/README.adoc
+++ b/README.adoc
@@ -12,6 +12,7 @@ Logging is achieved using the SLF4J facade over Logback. The logging configurati
 
 * Annotations
   - Expose
+  - JsonAdapter
   - SerializedName
   - Since
   - Until
