--- a/README.adoc
+++ b/README.adoc
@@ -16,6 +16,7 @@ Logging is achieved using the SLF4J facade over Logback. The logging configurati
   - SerializedName
   - Since
   - Until
+* Data Binding
 * JsonDeserializer
 * JsonSerializer
 * Null Serialization
